--- a/Real Estate Agency.ipynb
+++ b/Real Estate Agency.ipynb
@@ -2800,7 +2800,7 @@
     "\n",
     "pio.write_html(fig_1, file = 'plotly//state-cost squared distribution.html', auto_open = False)\n",
     "\n",
-    "display(HTML(\"\"\"<a href=\"https://htmlpreview.github.io/?https://github.com/IgorAbalakin/HH_data_project/blob/main/plotly/wages-city%20distribution.html\">Interactive visualization Plotly\"\"\"))\n",
+    "display(HTML(\"\"\"<a href=\"https://htmlpreview.github.io/?https://github.com/IgorAbalakin/Real_Estate_Agency/blob/main/plotly/state-cost%20squared%20distribution.html\">Interactive visualization Plotly\"\"\"))\n",
     "\n",
     "fig_1.show()"
    ]
